Added solarized theme for kitty. Added fonts

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -178,7 +178,8 @@ map kitty_mod+escape kitty_shell window
 
 # }}}
 # Themes included
-include OneDark.conf
+#include OneDark.conf
 #include OneDark2.conf
 #include Gruvbox.conf
 #include Nord.conf
+include solarized.conf
